--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-copy-clipboard": "^2.0.1",
         "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^6.1.1",
         "react-scripts": "4.0.3",
         "simple-peer": "^9.11.0",
         "socket.io-client": "^4.4.0",
