--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@mui/material": "^5.0.0",
         "@testing-library/jest-dom": "^5.16.0",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "axios": "^0.24.0",
+        "body-parser": "^1.19.1",
         "react": "^17.0.2",
-        "react-copy-clipboard": "^2.0.1",
-        "react-copy-to-clipboard": "^5.0.4",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.1.1",
         "react-scripts": "4.0.3",
